<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="200dp"
            android:scaleType="centerCrop"
            android:layout_height="200dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/phone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginBottom="8dp"
            android:text="@string/instruction_label_txt" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/username_text"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_btn"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_marginTop="8dp"
            android:text="@string/login_text"
            android:layout_width="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/register_btn_txt"
            android:layout_marginBottom="8dp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>